# mathfun

./: .gitignore  README.md  main.py  pyproject.toml  requirements_tests.txt
.github/workflows/: python-package.yml
src/mathfun/: __init__.py  chains.py  permutations.py
test/: test_chains.py  test_permutations.py
