[project]
name = "mathfun"
version = "0.6.8"
authors = [
    { name = "Andreas Würl", email = "andi@tryb.de" },
]
description = "Just some example implementations for kids math book topics"
requires-python = ">=3.9"
classifiers = [
    'Development Status :: 3 - Alpha',
    # Indicate who your project is intended for
    'Intended Audience :: Developers',
    'Topic :: Scientific/Engineering',
    # Pick your license as you wish (should match "license" above)
    'License :: OSI Approved :: Apache Software License',
    # Specify the Python versions you support here. In particular, ensure
    # that you indicate whether you support Python 2, Python 3 or both.
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
]
dependencies = [
]

[project.optional-dependencies]
tests = [
    'pytest-cov',
    'mock',
    'assertpy',
    'flake8'
]

[project.urls]
"Homepage" = "https://github.com/wuan/mathfun"
"Bug Tracker" = "https://github.com/wuan/mathfun/issues"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]